CCGOnline/CCGOnline/EnumReflector/Source/EnumReflectorParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 3.4
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// $ANTLR 3.4 C:\\GitProjects\\CCGOnlinePublic\\CCGOnline\\CCGOnline\\Grammars\\EnumReflector.g 2012-12-08 12:46:11

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 219
// Unreachable code detected.
#pragma warning disable 162
// Missing XML comment for publicly visible type or member 'Type_or_Member'
#pragma warning disable 1591
// CLS compliance checking will not be performed on 'type' because it is not visible from outside this assembly.
#pragma warning disable 3019


using System.Collections.Generic;
using Antlr.Runtime;
using Antlr.Runtime.Misc;


using Antlr.Runtime.Tree;
using RewriteRuleITokenStream = Antlr.Runtime.Tree.RewriteRuleTokenStream;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.4")]
public partial class EnumReflectorParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "BITFIELD", "COMMA", "DIGIT", "ENUM", "ENUM_BEGIN", "ENUM_END", "ENUM_ENTRY", "EQUALS", "EXTENDS", "HEX_DIGIT", "ID", "IDQUALIFIER", "LBRACE", "LEFT_SHIFT", "LPAREN", "META", "NAMESPACE", "POSITIVE_INTEGER10", "POSITIVE_INTEGER16", "POS_DIGIT", "RBRACE", "RPAREN", "SEMICOLON", "STRING", "WHITESPACE"
	};
	public const int EOF=-1;
	public const int BITFIELD=4;
	public const int COMMA=5;
	public const int DIGIT=6;
	public const int ENUM=7;
	public const int ENUM_BEGIN=8;
	public const int ENUM_END=9;
	public const int ENUM_ENTRY=10;
	public const int EQUALS=11;
	public const int EXTENDS=12;
	public const int HEX_DIGIT=13;
	public const int ID=14;
	public const int IDQUALIFIER=15;
	public const int LBRACE=16;
	public const int LEFT_SHIFT=17;
	public const int LPAREN=18;
	public const int META=19;
	public const int NAMESPACE=20;
	public const int POSITIVE_INTEGER10=21;
	public const int POSITIVE_INTEGER16=22;
	public const int POS_DIGIT=23;
	public const int RBRACE=24;
	public const int RPAREN=25;
	public const int SEMICOLON=26;
	public const int STRING=27;
	public const int WHITESPACE=28;

	public EnumReflectorParser(ITokenStream input)
		: this(input, new RecognizerSharedState())
	{
	}
	public EnumReflectorParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		ITreeAdaptor treeAdaptor = default(ITreeAdaptor);
		CreateTreeAdaptor(ref treeAdaptor);
		TreeAdaptor = treeAdaptor ?? new CommonTreeAdaptor();
		OnCreated();
	}
	// Implement this function in your helper file to use a custom tree adaptor
	partial void CreateTreeAdaptor(ref ITreeAdaptor adaptor);

	private ITreeAdaptor adaptor;

	public ITreeAdaptor TreeAdaptor
	{
		get
		{
			return adaptor;
		}

		set
		{
			this.adaptor = value;
		}
	}

	public override string[] TokenNames { get { return EnumReflectorParser.tokenNames; } }
	public override string GrammarFileName { get { return "C:\\GitProjects\\CCGOnlinePublic\\CCGOnline\\CCGOnline\\Grammars\\EnumReflector.g"; } }


	partial void OnCreated();
	partial void EnterRule(string ruleName, int ruleIndex);
	partial void LeaveRule(string ruleName, int ruleIndex);

	#region Rules
	partial void EnterRule_qualifier_list();
	partial void LeaveRule_qualifier_list();

	// $ANTLR start "qualifier_list"
	// C:\\GitProjects\\CCGOnlinePublic\\CCGOnline\\CCGOnline\\Grammars\\EnumReflector.g:32:1: qualifier_list : ( IDQUALIFIER ID )* ;
	[GrammarRule("qualifier_list")]
	private AstParserRuleReturnScope<object, IToken> qualifier_list()
	{
		EnterRule_qualifier_list();
		EnterRule("qualifier_list", 1);
		TraceIn("qualifier_list", 1);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken IDQUALIFIER1 = default(IToken);
		IToken ID2 = default(IToken);

		object IDQUALIFIER1_tree = default(object);
		object ID2_tree = default(object);
		try { DebugEnterRule(GrammarFileName, "qualifier_list");
		DebugLocation(32, 23);
		try
		{
			// C:\\GitProjects\\CCGOnlinePublic\\CCGOnline\\CCGOnline\\Grammars\\EnumReflector.g:33:2: ( ( IDQUALIFIER ID )* )
			DebugEnterAlt(1);
			// C:\\GitProjects\\CCGOnlinePublic\\CCGOnline\\CCGOnline\\Grammars\\EnumReflector.g:33:4: ( IDQUALIFIER ID )*
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(33, 4);
			// C:\\GitProjects\\CCGOnlinePublic\\CCGOnline\\CCGOnline\\Grammars\\EnumReflector.g:33:4: ( IDQUALIFIER ID )*
			try { DebugEnterSubRule(1);
			while (true)
			{
				int alt1=2;
				try { DebugEnterDecision(1, false);
				int LA1_0 = input.LA(1);

				if ((LA1_0==IDQUALIFIER))
				{
					alt1 = 1;
				}


				} finally { DebugExitDecision(1); }
				switch ( alt1 )
				{
				case 1:
					DebugEnterAlt(1);
					// C:\\GitProjects\\CCGOnlinePublic\\CCGOnline\\CCGOnline\\Grammars\\EnumReflector.g:33:6: IDQUALIFIER ID
					{
					DebugLocation(33, 6);
					IDQUALIFIER1=(IToken)Match(input,IDQUALIFIER,Follow._IDQUALIFIER_in_qualifier_list197); 
					IDQUALIFIER1_tree = (object)adaptor.Create(IDQUALIFIER1);
					adaptor.AddChild(root_0, IDQUALIFIER1_tree);
					DebugLocation(33, 18);
					ID2=(IToken)Match(input,ID,Follow._ID_in_qualifier_list199); 
					ID2_tree = (object)adaptor.Create(ID2);
					adaptor.AddChild(root_0, ID2_tree);

					}
					break;

				default:
					goto loop1;
				}
			}

			loop1:
				;

			} finally { DebugExitSubRule(1); }


			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("qualifier_list", 1);
			LeaveRule("qualifier_list", 1);
			LeaveRule_qualifier_list();
		}
		DebugLocation(33, 23);
		} finally { DebugExitRule(GrammarFileName, "qualifier_list"); }
		return retval;

	}
	// $ANTLR end "qualifier_list"

	partial void EnterRule_qualified_id();
	partial void LeaveRule_qualified_id();

	// $ANTLR start "qualified_id"
	// C:\\GitProjects\\CCGOnlinePublic\\CCGOnline\\CCGOnline\\Grammars\\EnumReflector.g:35:1: qualified_id : ID ^ qualifier_list ;
	[GrammarRule("qualified_id")]
	private AstParserRuleReturnScope<object, IToken> qualified_id()
	{
		EnterRule_qualified_id();
		EnterRule("qualified_id", 2);
		TraceIn("qualified_id", 2);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken ID3 = default(IToken);
		AstParserRuleReturnScope<object, IToken> qualifier_list4 = default(AstParserRuleReturnScope<object, IToken>);

		object ID3_tree = default(object);
		try { DebugEnterRule(GrammarFileName, "qualified_id");
		DebugLocation(35, 22);
		try
		{
			// C:\\GitProjects\\CCGOnlinePublic\\CCGOnline\\CCGOnline\\Grammars\\EnumReflector.g:36:2: ( ID ^ qualifier_list )
			DebugEnterAlt(1);
			// C:\\GitProjects\\CCGOnlinePublic\\CCGOnline\\CCGOnline\\Grammars\\EnumReflector.g:36:4: ID ^ qualifier_list
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(36, 6);
			ID3=(IToken)Match(input,ID,Follow._ID_in_qualified_id213); 
			ID3_tree = (object)adaptor.Create(ID3);
			root_0 = (object)adaptor.BecomeRoot(ID3_tree, root_0);
			DebugLocation(36, 8);
			PushFollow(Follow._qualifier_list_in_qualified_id216);
			qualifier_list4=qualifier_list();
			PopFollow();

			adaptor.AddChild(root_0, qualifier_list4.Tree);

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("qualified_id", 2);
			LeaveRule("qualified_id", 2);
			LeaveRule_qualified_id();
		}
		DebugLocation(36, 22);
		} finally { DebugExitRule(GrammarFileName, "qualified_id"); }
		return retval;

	}
	// $ANTLR end "qualified_id"

	partial void EnterRule_enum_conversion_tag();
	partial void LeaveRule_enum_conversion_tag();

	// $ANTLR start "enum_conversion_tag"
	// C:\\GitProjects\\CCGOnlinePublic\\CCGOnline\\CCGOnline\\Grammars\\EnumReflector.g:38:1: enum_conversion_tag : META ! ENUM_ENTRY ^ LPAREN ! STRING RPAREN !;
	[GrammarRule("enum_conversion_tag")]
	private AstParserRuleReturnScope<object, IToken> enum_conversion_tag()
	{
		EnterRule_enum_conversion_tag();
		EnterRule("enum_conversion_tag", 3);
		TraceIn("enum_conversion_tag", 3);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken META5 = default(IToken);
		IToken ENUM_ENTRY6 = default(IToken);
		IToken LPAREN7 = default(IToken);
		IToken STRING8 = default(IToken);
		IToken RPAREN9 = default(IToken);

		object META5_tree = default(object);
		object ENUM_ENTRY6_tree = default(object);
		object LPAREN7_tree = default(object);
		object STRING8_tree = default(object);
		object RPAREN9_tree = default(object);
		try { DebugEnterRule(GrammarFileName, "enum_conversion_tag");
		DebugLocation(38, 44);
		try
		{
			// C:\\GitProjects\\CCGOnlinePublic\\CCGOnline\\CCGOnline\\Grammars\\EnumReflector.g:39:2: ( META ! ENUM_ENTRY ^ LPAREN ! STRING RPAREN !)
			DebugEnterAlt(1);
			// C:\\GitProjects\\CCGOnlinePublic\\CCGOnline\\CCGOnline\\Grammars\\EnumReflector.g:39:4: META ! ENUM_ENTRY ^ LPAREN ! STRING RPAREN !
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(39, 8);
			META5=(IToken)Match(input,META,Follow._META_in_enum_conversion_tag228); 
			DebugLocation(39, 20);
			ENUM_ENTRY6=(IToken)Match(input,ENUM_ENTRY,Follow._ENUM_ENTRY_in_enum_conversion_tag231); 
			ENUM_ENTRY6_tree = (object)adaptor.Create(ENUM_ENTRY6);
			root_0 = (object)adaptor.BecomeRoot(ENUM_ENTRY6_tree, root_0);
			DebugLocation(39, 28);
			LPAREN7=(IToken)Match(input,LPAREN,Follow._LPAREN_in_enum_conversion_tag234); 
			DebugLocation(39, 30);
			STRING8=(IToken)Match(input,STRING,Follow._STRING_in_enum_conversion_tag237); 
			STRING8_tree = (object)adaptor.Create(STRING8);
			adaptor.AddChild(root_0, STRING8_tree);
			DebugLocation(39, 43);
			RPAREN9=(IToken)Match(input,RPAREN,Follow._RPAREN_in_enum_conversion_tag239); 

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("enum_conversion_tag", 3);
			LeaveRule("enum_conversion_tag", 3);
			LeaveRule_enum_conversion_tag();
		}
		DebugLocation(39, 44);
		} finally { DebugExitRule(GrammarFileName, "enum_conversion_tag"); }
		return retval;

	}
	// $ANTLR end "enum_conversion_tag"

	partial void EnterRule_shift_expression();
	partial void LeaveRule_shift_expression();

	// $ANTLR start "shift_expression"
	// C:\\GitProjects\\CCGOnlinePublic\\CCGOnline\\CCGOnline\\Grammars\\EnumReflector.g:41:1: shift_expression : POSITIVE_INTEGER10 LEFT_SHIFT ^ POSITIVE_INTEGER10 ;
	[GrammarRule("shift_expression")]
	private AstParserRuleReturnScope<object, IToken> shift_expression()
	{
		EnterRule_shift_expression();
		EnterRule("shift_expression", 4);
		TraceIn("shift_expression", 4);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken POSITIVE_INTEGER1010 = default(IToken);
		IToken LEFT_SHIFT11 = default(IToken);
		IToken POSITIVE_INTEGER1012 = default(IToken);

		object POSITIVE_INTEGER1010_tree = default(object);
		object LEFT_SHIFT11_tree = default(object);
		object POSITIVE_INTEGER1012_tree = default(object);
		try { DebugEnterRule(GrammarFileName, "shift_expression");
		DebugLocation(41, 53);
		try
		{
			// C:\\GitProjects\\CCGOnlinePublic\\CCGOnline\\CCGOnline\\Grammars\\EnumReflector.g:42:2: ( POSITIVE_INTEGER10 LEFT_SHIFT ^ POSITIVE_INTEGER10 )
			DebugEnterAlt(1);
			// C:\\GitProjects\\CCGOnlinePublic\\CCGOnline\\CCGOnline\\Grammars\\EnumReflector.g:42:4: POSITIVE_INTEGER10 LEFT_SHIFT ^ POSITIVE_INTEGER10
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(42, 4);
			POSITIVE_INTEGER1010=(IToken)Match(input,POSITIVE_INTEGER10,Follow._POSITIVE_INTEGER10_in_shift_expression250); 
			POSITIVE_INTEGER1010_tree = (object)adaptor.Create(POSITIVE_INTEGER1010);
			adaptor.AddChild(root_0, POSITIVE_INTEGER1010_tree);
			DebugLocation(42, 33);
			LEFT_SHIFT11=(IToken)Match(input,LEFT_SHIFT,Follow._LEFT_SHIFT_in_shift_expression252); 
			LEFT_SHIFT11_tree = (object)adaptor.Create(LEFT_SHIFT11);
			root_0 = (object)adaptor.BecomeRoot(LEFT_SHIFT11_tree, root_0);
			DebugLocation(42, 35);
			POSITIVE_INTEGER1012=(IToken)Match(input,POSITIVE_INTEGER10,Follow._POSITIVE_INTEGER10_in_shift_expression255); 
			POSITIVE_INTEGER1012_tree = (object)adaptor.Create(POSITIVE_INTEGER1012);
			adaptor.AddChild(root_0, POSITIVE_INTEGER1012_tree);

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("shift_expression", 4);
			LeaveRule("shift_expression", 4);
			LeaveRule_shift_expression();
		}
		DebugLocation(42, 53);
		} finally { DebugExitRule(GrammarFileName, "shift_expression"); }
		return retval;

	}
	// $ANTLR end "shift_expression"

	partial void EnterRule_integer_constant();
	partial void LeaveRule_integer_constant();

	// $ANTLR start "integer_constant"
	// C:\\GitProjects\\CCGOnlinePublic\\CCGOnline\\CCGOnline\\Grammars\\EnumReflector.g:44:1: integer_constant : ( shift_expression | POSITIVE_INTEGER16 | POSITIVE_INTEGER10 | qualified_id );
	[GrammarRule("integer_constant")]
	private AstParserRuleReturnScope<object, IToken> integer_constant()
	{
		EnterRule_integer_constant();
		EnterRule("integer_constant", 5);
		TraceIn("integer_constant", 5);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken POSITIVE_INTEGER1614 = default(IToken);
		IToken POSITIVE_INTEGER1015 = default(IToken);
		AstParserRuleReturnScope<object, IToken> shift_expression13 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> qualified_id16 = default(AstParserRuleReturnScope<object, IToken>);

		object POSITIVE_INTEGER1614_tree = default(object);
		object POSITIVE_INTEGER1015_tree = default(object);
		try { DebugEnterRule(GrammarFileName, "integer_constant");
		DebugLocation(44, 76);
		try
		{
			// C:\\GitProjects\\CCGOnlinePublic\\CCGOnline\\CCGOnline\\Grammars\\EnumReflector.g:45:2: ( shift_expression | POSITIVE_INTEGER16 | POSITIVE_INTEGER10 | qualified_id )
			int alt2=4;
			try { DebugEnterDecision(2, false);
			switch (input.LA(1))
			{
			case POSITIVE_INTEGER10:
				{
				int LA2_1 = input.LA(2);

				if ((LA2_1==LEFT_SHIFT))
				{
					alt2 = 1;
				}
				else if ((LA2_1==COMMA||LA2_1==META||LA2_1==RBRACE))
				{
					alt2 = 3;
				}
				else
				{
					NoViableAltException nvae = new NoViableAltException("", 2, 1, input);
					DebugRecognitionException(nvae);
					throw nvae;
				}
				}
				break;
			case POSITIVE_INTEGER16:
				{
				alt2 = 2;
				}
				break;
			case ID:
				{
				alt2 = 4;
				}
				break;
			default:
				{
					NoViableAltException nvae = new NoViableAltException("", 2, 0, input);
					DebugRecognitionException(nvae);
					throw nvae;
				}
			}

			} finally { DebugExitDecision(2); }
			switch (alt2)
			{
			case 1:
				DebugEnterAlt(1);
				// C:\\GitProjects\\CCGOnlinePublic\\CCGOnline\\CCGOnline\\Grammars\\EnumReflector.g:45:4: shift_expression
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(45, 4);
				PushFollow(Follow._shift_expression_in_integer_constant268);
				shift_expression13=shift_expression();
				PopFollow();

				adaptor.AddChild(root_0, shift_expression13.Tree);

				}
				break;
			case 2:
				DebugEnterAlt(2);
				// C:\\GitProjects\\CCGOnlinePublic\\CCGOnline\\CCGOnline\\Grammars\\EnumReflector.g:45:23: POSITIVE_INTEGER16
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(45, 23);
				POSITIVE_INTEGER1614=(IToken)Match(input,POSITIVE_INTEGER16,Follow._POSITIVE_INTEGER16_in_integer_constant272); 
				POSITIVE_INTEGER1614_tree = (object)adaptor.Create(POSITIVE_INTEGER1614);
				adaptor.AddChild(root_0, POSITIVE_INTEGER1614_tree);

				}
				break;
			case 3:
				DebugEnterAlt(3);
				// C:\\GitProjects\\CCGOnlinePublic\\CCGOnline\\CCGOnline\\Grammars\\EnumReflector.g:45:44: POSITIVE_INTEGER10
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(45, 44);
				POSITIVE_INTEGER1015=(IToken)Match(input,POSITIVE_INTEGER10,Follow._POSITIVE_INTEGER10_in_integer_constant276); 
				POSITIVE_INTEGER1015_tree = (object)adaptor.Create(POSITIVE_INTEGER1015);
				adaptor.AddChild(root_0, POSITIVE_INTEGER1015_tree);

				}
				break;
			case 4:
				DebugEnterAlt(4);
				// C:\\GitProjects\\CCGOnlinePublic\\CCGOnline\\CCGOnline\\Grammars\\EnumReflector.g:45:65: qualified_id
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(45, 65);
				PushFollow(Follow._qualified_id_in_integer_constant280);
				qualified_id16=qualified_id();
				PopFollow();

				adaptor.AddChild(root_0, qualified_id16.Tree);

				}
				break;

			}
			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("integer_constant", 5);
			LeaveRule("integer_constant", 5);
			LeaveRule_integer_constant();
		}
		DebugLocation(45, 76);
		} finally { DebugExitRule(GrammarFileName, "integer_constant"); }
		return retval;

	}
	// $ANTLR end "integer_constant"

	partial void EnterRule_value_assignment();
	partial void LeaveRule_value_assignment();

	// $ANTLR start "value_assignment"
	// C:\\GitProjects\\CCGOnlinePublic\\CCGOnline\\CCGOnline\\Grammars\\EnumReflector.g:47:1: value_assignment : EQUALS ! integer_constant ;
	[GrammarRule("value_assignment")]
	private AstParserRuleReturnScope<object, IToken> value_assignment()
	{
		EnterRule_value_assignment();
		EnterRule("value_assignment", 6);
		TraceIn("value_assignment", 6);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken EQUALS17 = default(IToken);
		AstParserRuleReturnScope<object, IToken> integer_constant18 = default(AstParserRuleReturnScope<object, IToken>);

		object EQUALS17_tree = default(object);
		try { DebugEnterRule(GrammarFileName, "value_assignment");
		DebugLocation(47, 28);
		try
		{
			// C:\\GitProjects\\CCGOnlinePublic\\CCGOnline\\CCGOnline\\Grammars\\EnumReflector.g:48:2: ( EQUALS ! integer_constant )
			DebugEnterAlt(1);
			// C:\\GitProjects\\CCGOnlinePublic\\CCGOnline\\CCGOnline\\Grammars\\EnumReflector.g:48:4: EQUALS ! integer_constant
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(48, 10);
			EQUALS17=(IToken)Match(input,EQUALS,Follow._EQUALS_in_value_assignment289); 
			DebugLocation(48, 12);
			PushFollow(Follow._integer_constant_in_value_assignment292);
			integer_constant18=integer_constant();
			PopFollow();

			adaptor.AddChild(root_0, integer_constant18.Tree);

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("value_assignment", 6);
			LeaveRule("value_assignment", 6);
			LeaveRule_value_assignment();
		}
		DebugLocation(48, 28);
		} finally { DebugExitRule(GrammarFileName, "value_assignment"); }
		return retval;

	}
	// $ANTLR end "value_assignment"

	partial void EnterRule_last_enum_entry();
	partial void LeaveRule_last_enum_entry();

	// $ANTLR start "last_enum_entry"
	// C:\\GitProjects\\CCGOnlinePublic\\CCGOnline\\CCGOnline\\Grammars\\EnumReflector.g:50:1: last_enum_entry : ID ^ ( value_assignment )? ( enum_conversion_tag )? ;
	[GrammarRule("last_enum_entry")]
	private AstParserRuleReturnScope<object, IToken> last_enum_entry()
	{
		EnterRule_last_enum_entry();
		EnterRule("last_enum_entry", 7);
		TraceIn("last_enum_entry", 7);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken ID19 = default(IToken);
		AstParserRuleReturnScope<object, IToken> value_assignment20 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> enum_conversion_tag21 = default(AstParserRuleReturnScope<object, IToken>);

		object ID19_tree = default(object);
		try { DebugEnterRule(GrammarFileName, "last_enum_entry");
		DebugLocation(50, 46);
		try
		{
			// C:\\GitProjects\\CCGOnlinePublic\\CCGOnline\\CCGOnline\\Grammars\\EnumReflector.g:51:2: ( ID ^ ( value_assignment )? ( enum_conversion_tag )? )
			DebugEnterAlt(1);
			// C:\\GitProjects\\CCGOnlinePublic\\CCGOnline\\CCGOnline\\Grammars\\EnumReflector.g:51:4: ID ^ ( value_assignment )? ( enum_conversion_tag )?
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(51, 6);
			ID19=(IToken)Match(input,ID,Follow._ID_in_last_enum_entry302); 
			ID19_tree = (object)adaptor.Create(ID19);
			root_0 = (object)adaptor.BecomeRoot(ID19_tree, root_0);
			DebugLocation(51, 8);
			// C:\\GitProjects\\CCGOnlinePublic\\CCGOnline\\CCGOnline\\Grammars\\EnumReflector.g:51:8: ( value_assignment )?
			int alt3=2;
			try { DebugEnterSubRule(3);
			try { DebugEnterDecision(3, false);
			int LA3_0 = input.LA(1);

			if ((LA3_0==EQUALS))
			{
				alt3 = 1;
			}
			} finally { DebugExitDecision(3); }
			switch (alt3)
			{
			case 1:
				DebugEnterAlt(1);
				// C:\\GitProjects\\CCGOnlinePublic\\CCGOnline\\CCGOnline\\Grammars\\EnumReflector.g:51:8: value_assignment
				{
				DebugLocation(51, 8);
				PushFollow(Follow._value_assignment_in_last_enum_entry305);
				value_assignment20=value_assignment();
				PopFollow();

				adaptor.AddChild(root_0, value_assignment20.Tree);

				}
				break;

			}
			} finally { DebugExitSubRule(3); }

			DebugLocation(51, 26);
			// C:\\GitProjects\\CCGOnlinePublic\\CCGOnline\\CCGOnline\\Grammars\\EnumReflector.g:51:26: ( enum_conversion_tag )?
			int alt4=2;
			try { DebugEnterSubRule(4);
			try { DebugEnterDecision(4, false);
			int LA4_0 = input.LA(1);

			if ((LA4_0==META))
			{
				alt4 = 1;
			}
			} finally { DebugExitDecision(4); }
			switch (alt4)
			{
			case 1:
				DebugEnterAlt(1);
				// C:\\GitProjects\\CCGOnlinePublic\\CCGOnline\\CCGOnline\\Grammars\\EnumReflector.g:51:26: enum_conversion_tag
				{
				DebugLocation(51, 26);
				PushFollow(Follow._enum_conversion_tag_in_last_enum_entry308);
				enum_conversion_tag21=enum_conversion_tag();
				PopFollow();

				adaptor.AddChild(root_0, enum_conversion_tag21.Tree);

				}
				break;

			}
			} finally { DebugExitSubRule(4); }


			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("last_enum_entry", 7);
			LeaveRule("last_enum_entry", 7);
			LeaveRule_last_enum_entry();
		}
		DebugLocation(51, 46);
		} finally { DebugExitRule(GrammarFileName, "last_enum_entry"); }
		return retval;

	}
	// $ANTLR end "last_enum_entry"

	partial void EnterRule_non_last_enum_entry();
	partial void LeaveRule_non_last_enum_entry();

	// $ANTLR start "non_last_enum_entry"
	// C:\\GitProjects\\CCGOnlinePublic\\CCGOnline\\CCGOnline\\Grammars\\EnumReflector.g:53:1: non_last_enum_entry : ID ^ ( value_assignment )? COMMA ! ( enum_conversion_tag )? ;
	[GrammarRule("non_last_enum_entry")]
	private AstParserRuleReturnScope<object, IToken> non_last_enum_entry()
	{
		EnterRule_non_last_enum_entry();
		EnterRule("non_last_enum_entry", 8);
		TraceIn("non_last_enum_entry", 8);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);
